# Zagreus

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE-README  README.md  annotated.html  bitboard.cpp  bitboard.h  bitboard_8cpp.html  bitboard_8cpp__incl.map  bitboard_8cpp__incl.md5  bitboard_8cpp_source.html  bitboard_8h.html  bitboard_8h__dep__incl.map  bitboard_8h__dep__incl.md5  bitboard_8h__incl.map  bitboard_8h__incl.md5  bitboard_8h_source.html  bitwise.cpp  bitwise.h  bitwise_8h.html  bitwise_8h__dep__incl.map  bitwise_8h__dep__incl.md5  bitwise_8h__incl.map  bitwise_8h__incl.md5  bitwise_8h_source.html  board.cpp  board.h  board_8cpp.html  board_8cpp__incl.map  board_8cpp__incl.md5  board_8cpp_source.html  board_8h.html  board_8h__dep__incl.map  board_8h__dep__incl.md5  board_8h__incl.map  board_8h__incl.md5  (+537 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ctest.yml  doxygen.yml  release.yml  valgrind.yml
collections/: move_list.cpp  move_list.h  undo_stack.cpp  undo_stack.h
include/: senjo.lib
include/epd/: bk.epd  hour.epd  kaufman.epd  lct.epd  nolot.epd  nullmove.epd  silent.epd  wac.epd
lib/Pyrrhic/: stdendian.h  tbchess.cpp  tbchess.h  tbconfig.h  tbprobe.cpp  tbprobe.h
lib/senjo/: BackgroundCommand.cpp  ChessEngine.cpp  EngineOption.cpp  GoParams.h  LICENSE  Output.cpp  Parameters.cpp  Parameters.h  README.md  SearchStats.h  UCIAdapter.cpp
scripts/: mirror_fen.py  symmetry_test_fens.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+41 more)
senjo/: BackgroundCommand.cpp  BackgroundCommand.h  ChessEngine.cpp  ChessEngine.h  ChessMove.h  EngineOption.cpp  EngineOption.h  GoParams.h  MoveFinder.cpp  MoveFinder.h  Output.cpp  Output.h  Parameters.cpp  Parameters.h  Platform.h  README.md  SearchStats.h  Square.h  Thread.cpp  Thread.h  UCIAdapter.cpp  UCIAdapter.h
src/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  bitwise.cpp  bitwise.h  board.cpp  board.h  constants.h  engine.cpp  engine.h  eval.cpp  eval.h  eval_features.h  evaluate.cpp  evaluate.h  features.cpp  features.h  macros.h  magics.cpp  magics.h  main.cpp  move.cpp  move.h  move_gen.cpp  move_gen.h  move_picker.cpp  move_picker.h  movegen.cpp  movegen.h  movelist_pool.cpp  movelist_pool.h  movepicker.cpp  movepicker.h  perft.cpp  perft.h  pst.cpp  pst.h  search.cpp  search.h  (+14 more)
tests/: draw_tests.cpp  ep_tests.cpp  eval_tests.cpp  perft_tests.cpp  see_tests.cpp  tests_main.cpp  types_tests.cpp
tuner-data/: README.md
